# pybind11-try

./: CMakeLists.txt  README.md  pixi.toml  pyproject.toml
